[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/engine/settingsmenu.gd" type="Script" id=1]

[node name="Settings" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 50.0
margin_right = -200.0
margin_bottom = -50.0
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
margin_right = 624.0
margin_bottom = 500.0
window_title = "Settings"

[node name="EntireContents" type="VBoxContainer" parent="WindowDialog"]
anchor_left = 0.02
anchor_top = 0.03
anchor_right = 0.98
anchor_bottom = 0.97

[node name="SettingsContainer" type="VBoxContainer" parent="WindowDialog/EntireContents"]
margin_right = 599.0
margin_bottom = 446.0
size_flags_vertical = 3

[node name="Mouse" type="Label" parent="WindowDialog/EntireContents/SettingsContainer"]
margin_right = 599.0
margin_bottom = 14.0
text = "Mouse sensitivity:"

[node name="MouseSens" type="HSlider" parent="WindowDialog/EntireContents/SettingsContainer"]
margin_top = 18.0
margin_right = 599.0
margin_bottom = 34.0
min_value = 0.25
max_value = 12.0
step = 0.25
value = 7.0
tick_count = 6
ticks_on_borders = true

[node name="VideoSettings" type="Label" parent="WindowDialog/EntireContents/SettingsContainer"]
margin_top = 38.0
margin_right = 599.0
margin_bottom = 52.0
text = "Video Settings:"

[node name="Fxaa" type="CheckButton" parent="WindowDialog/EntireContents/SettingsContainer"]
margin_top = 56.0
margin_right = 112.0
margin_bottom = 96.0
size_flags_horizontal = 0
text = "Fxaa:"

[node name="ConfirmationContainer" type="HBoxContainer" parent="WindowDialog/EntireContents"]
margin_top = 450.0
margin_right = 599.0
margin_bottom = 470.0
size_flags_horizontal = 3
alignment = 1

[node name="Cancel" type="Button" parent="WindowDialog/EntireContents/ConfirmationContainer"]
margin_right = 197.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Cancel"

[node name="Apply" type="Button" parent="WindowDialog/EntireContents/ConfirmationContainer"]
margin_left = 201.0
margin_right = 398.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Apply"

[node name="Ok" type="Button" parent="WindowDialog/EntireContents/ConfirmationContainer"]
margin_left = 402.0
margin_right = 599.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Ok"

[connection signal="pressed" from="WindowDialog/EntireContents/ConfirmationContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="WindowDialog/EntireContents/ConfirmationContainer/Apply" to="." method="_on_Apply_pressed"]
[connection signal="pressed" from="WindowDialog/EntireContents/ConfirmationContainer/Ok" to="." method="_on_Ok_pressed"]
